--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rouyesh-institute",
-  "version": "1.1.1",
+  "name": "Library Project",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,17 +10,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@next/third-parties": "^16.0.10",
-    "@supabase/supabase-js": "^2.87.1",
-    "@vercel/speed-insights": "^1.3.1",
     "clsx": "^2.1.1",
     "nanoid": "^5.1.6",
     "next": "16.0.10",
     "next-auth": "^4.24.13",
     "react": "19.2.3",
-    "react-date-object": "^2.1.9",
     "react-dom": "19.2.3",
-    "react-multi-date-picker": "^4.5.2",
     "use-debounce": "^10.0.6",
     "web-push": "^3.6.7"
   },
@@ -35,7 +30,6 @@
     "eslint-config-next": "15.0.3",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
-    "typescript": "^5.9.3",
-    "video.js": "^8.23.4"
+    "typescript": "^5.9.3"
   }
 }
